consolidated few lists into List view, added some styling

--- a/app.json
+++ b/app.json
@@ -13,6 +13,10 @@
          "x-bootstrap": true
       },
       {
+         "path": "overrides.js",
+         "x-compile": true
+      },
+      {
          "path": "app.js",
          "bundle": true,
          "update": "delta"
